statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  serviceName: home-assistant
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 50
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: home-assistant
              mountPath: /config
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: ["NET_RAW", "NET_ADMIN"]
      terminationGracePeriodSeconds: 30
      volumes: []   #empty array
  volumeClaimTemplates:
    - metadata:
        name: home-assistant 
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
